[package]
name = "rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rule-system = { path = "../rule-system"}
bevy = { version = "0.7" }
bevy-inspector-egui = "0.11"
peg = "0.8"
anyhow = "1.0"
serde = { version= "1.0", features = ["derive"] }
iyes_loopless = "0.5"
bincode = "1.3"
directories = "4.0"
rstar = "0.9"
derive_more = "0.99.17"
rand = "0.8.5"

[features]
# default = ["debug_actions", "debug_state", "debug_rtrees", "serde_support"]
default = ["serde_support"]

# Print rule engine related debug code
debug_actions = []
debug_state = []
debug_rtrees = []

serde_support = []
